# todolist

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  models.rs  storage.rs  windows_ext.rs
src/app/: store.ts  tauri.ts  todoColors.ts  types.ts
src/components/: ManageView.tsx  RecurrencePicker.tsx  SettingsView.tsx  TodoCard.tsx  TodoComposer.tsx  WidgetView.tsx
